fix: disable user select and fix control align

--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -3,6 +3,8 @@
 }
 
 .plator__player {
+  -webkit-user-select: none;
+  user-select: none;
   border: 0 solid rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   position: relative;
@@ -11,6 +13,7 @@
   border-radius: 5px;
   cursor: pointer;
   margin-bottom: 20px;
+  font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
   & video {
     width: 100%;
     height: auto;
@@ -171,27 +174,25 @@
 .plator__player.is-waiting {
   & .plator__player__controls {
     transform: translateY(0);
-  }
-  & .plator__player__progress {
     animation: plator-progress 1s linear infinite;
-    background-size: 22px 22px;
+    background-size: 42px 42px;
     background-repeat: repeat-x;
     background-image: linear-gradient(
-        -45deg,
-        rgba(0, 0, 0, .25) 25%,
-        transparent 25%,
-        transparent 50%,
-        rgba(0, 0, 0, .25) 50%,
-        rgba(0, 0, 0, .25) 75%,
-        transparent 75%,
-        transparent
+      -45deg,
+      rgba(0, 0, 0, .25) 25%,
+      transparent 25%,
+      transparent 50%,
+      rgba(0, 0, 0, .25) 50%,
+      rgba(0, 0, 0, .25) 75%,
+      transparent 75%,
+      transparent
     );
   }
 }
 
 @keyframes plator-progress {
     to {
-        background-position: 22px 0;
+        background-position: 42px 0;
     }
 }
 
@@ -271,8 +272,15 @@ input.plator__player__progress--track[type=range]::-webkit-slider-thumb {
   &:before {
     display: none;
   }
+  // audio:not([controls])
+  & audio {
+    display: none;
+    height: 0;
+    vertical-align: middle;
+  }
   & .plator__player__controls {
-    background: rgba(0,0,0,0.4);
+    top: 0;
+    background-color: rgba(0,0,0,0.4);
   }
   &.hide-control {
     & .plator__player__controls {
